--- a/.env
+++ b/.env
@@ -5,13 +5,13 @@ PROJECT_ROOT=D:/Demo/Sales_Analytics
 
 # --- Data Paths ---
 SALES_DATA_SOURCE=${PROJECT_ROOT}/Data/Source
-BRONZE_PATH=file:///D:/Demo/Sales_Analytics/Data/Bronze
+BRONZE_PATH="file:///D:/Demo/Sales_Analytics/Data/Bronze"
 SILVER_PATH=${PROJECT_ROOT}/Data/Source/Silver
 GOLD_PATH=${PROJECT_ROOT}/Data/Source/Gold
 
 # --- JDBC Jar ---
 # JDBC driver jar
-JDBC_JAR=C:/Users/Kaust/Downloads/sqljdbc_13.2.1.0_enu/sqljdbc_13.2/enu/jars/mssql-jdbc-13.2.1.jre11.jar
+JDBC_JAR="file:///D:/Demo/Sales_Analytics/jars/mssql-jdbc-13.2.1.jre11.jar"
 
 # --- SQL Server Details ---
 SQLSERVER_HOST = localhost
