added silver_transform.py file

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ PROJECT_ROOT=D:/Demo/Sales_Analytics
 # --- Data Paths ---
 SALES_DATA_SOURCE=${PROJECT_ROOT}/Data/Source
 BRONZE_PATH="file:///D:/Demo/Sales_Analytics/Data/Bronze"
-SILVER_PATH=${PROJECT_ROOT}/Data/Source/Silver
-GOLD_PATH=${PROJECT_ROOT}/Data/Source/Gold
+SILVER_PATH="file:///D:/Demo/Sales_Analytics/Data/Silver"
+GOLD_PATH="file:///D:/Demo/Sales_Analytics/Data/Gold"
 
 # --- JDBC Jar ---
 # JDBC driver jar
